# gmod-animated-avatars

./: .editorconfig  .gitignore  README.md
.github/workflows/: build.yml
addons/animated_avatars/lua/autorun/server/: animated_avatarimage.lua
addons/animated_avatars/lua/vgui/: animated_avatarimage.lua
wasm-gif-to-vtf/: Cargo.toml
wasm-gif-to-vtf/.cargo/: config.toml
wasm-gif-to-vtf/src/: lib.rs
