[package]
name = "wasm-gif-to-vtf"
version = "0.1.0"
edition = "2024"
authors = ["William Venner <william@venner.io>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["gif"] }
vtf = { git = "https://github.com/WilliamVenner/vtf-rs.git", branch = "feat/animated-vtf" }
thiserror = "2"
wasm-bindgen = "=0.2.89"
base64 = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true